# Grappling-Skeleton-overlay

./: FightAI.cmd  QUICKSTART.md  README.md  exports_spec.md  install_gso.bat  install_gso.command  install_gso.py  install_gso.sh  pyproject.toml  requirements.lock.txt  requirements.txt  schema.sql  test_day1.cmd  test_day1.sh  testinstructions
.github/workflows/: windows-portable.yml
FightAI/: FightAI-debug.cmd  FightAI-repair.cmd  FightAI.cmd  FightAI.vbs  README.txt  setup_python.ps1
FightAI/app/gso_app/: cli.py  entrypoint.py  gui.py  paths.py
FightAI/models/: README.txt
FightAI/runtime/python/: README.txt
FightAI/tools/: bootstrap_python.cmd  bootstrap_python.ps1  write_support_prompt.cmd
adapters/: __init__.py
apps/api/: README.md  main.py
apps/windows/: README.md  main.py
core/: __init__.py  inference.py
docs/: architecture.md  day1-next-steps.md  pipeline.md  product-tech-spec.md
gso/: __init__.py  cli.py
schemas/: profile_map.json
src/gso_app/: __init__.py  cli.py  entrypoint.py  gui.py  installer.py  paths.py
src/ingest/: __init__.py  video_reader.py
src/matching/: __init__.py  cross_video_identity.py
src/output/: __init__.py  exporter.py
src/pose/: __init__.py  pose_extractor.py
src/tracking/: __init__.py  skeleton_tracker.py
tests/: day1_validate.py
tools/dist_windows/: build_portable.ps1
tools/launcher/FightAI.Launcher/: FightAI.Launcher.csproj  Program.cs
training/: README.md
