[project]
name = "gso-skeleton"
version = "0.1.0"
description = "Application skeleton for video analysis artifacts."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
gso-analyze = "gso_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
